fixed work break on task item

--- a/src/components/to-do/task/styles.css
+++ b/src/components/to-do/task/styles.css
@@ -28,8 +28,9 @@ li{
     align-items: center;
     color: #4043C9;
     width: 100%;
+    padding: 0 20px;
+    word-break: break-all;
 }
-
 
 /* // completed task */
 .task-completed{
